--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
         <div>время</div>
         <div>To-Do Лист</div>
         <div>
-          <a class="image" href="#"
-            ><img
-              class="icon iconImage"
-              src="content/plus_dark.png"
-              alt='Иконка "добавить"' />
+          <a class="image" href="form.html">
+            <img class="icon iconImage" src="content/plus_dark.png" alt="#" />
             <img
               class="hoverIcon iconImage"
               src="content/plus_color.png"
-              alt='Иконка "добавить"'
-          /></a>
+              alt="#"
+            />
+          </a>
         </div>
       </header>
+      <hr />
+      <div class="checkList">
+        <div><a class="clickCheckList" href="#">Новые</a></div>
+        <div><a class="clickCheckList" href="#">Выполненные</a></div>
+      </div>
     </div>
   </body>
 </html>
