--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div class="backgroundColor">
       <div class="toDo">
         <header class="container">
-          <div>To-Do Лист</div>
+          <h1>To-Do Лист</h1>
+        </header>
+
+        <div class="checkList">
           <div>
             <button class="btnNew" id="addTaskBtn">Добавить</button>
           </div>
-        </header>
-        <div class="checkList">
           <button id="tab-new">Новые</button>
           <button id="tab-done">Выполненные</button>
         </div>
